@@ -1,82 +1,76 @@
-#!/usr/bin/perl -w
-use 5.010;
-use strict;
-use warnings;
-use autodie;
-
+package Exobrain::Agent::Action::BeeInbox;
 use Exobrain;
-use Exobrain::Cache;
-use WebService::Beeminder;
-use POSIX qw(tzset);
+use Method::Signatures;
+use Moose;
 
-# PODNAME: bee-inbox
+with 'Exobrain::Agent::Run';
+
+use constant DEBUG => 0;
+
 # ABSTRACT: Watch inbox and send low-water marks to beeminder
 
-use constant DEBUG => 1;
+method run() {
 
-my $exobrain = Exobrain->new;
-my $cache = Exobrain::Cache->new(namespace => $0);
-my $tz = $exobrain->config->{General}{timezone};
+    my $exobrain = $self->exobrain;
+    my $cache    = $self->cache;
 
-# TODO: Exobrain should set its own TZ, not have us do it
-# manually.
+    # Load our dependencies first so we fail quickly if they're
+    # not installed.
 
-if ($tz) {
-    say "Setting timezone to $tz";
-    $ENV{TZ} = $tz;     ## no critic RequireLocalizedPunctuationVars
-    tzset();
-}
+    # TODO: Replace these with a real way of signalling dependencies (GH #44).
 
-# When we see a server in this hash, we update the corresponding
-# beeminder goal in the value.
+    $exobrain->_load_component('Measurement::Mailbox');
+    $exobrain->_load_component('Intent::Beeminder');
 
-my %inbox_goal = (
-    'perltraining.com.au' => 'inbox',
-);
+    # Our inbox goals are 'server => beeminder goal' pairs.
+    my $inbox_goals = $self->config->inbox_goals;
 
-$exobrain->watch_loop(
-    class  => 'Measurement::Mailbox',
-    filter => sub {
-        $_->mailbox eq 'INBOX' and $inbox_goal{ $_->server }
-    },
-    then => sub {
-        my $event = shift;
+    $exobrain->watch_loop(
+        class  => 'Measurement::Mailbox',
+        filter => sub {
+            $_->mailbox eq 'INBOX' and $inbox_goals->{ $_->server }
+        },
+        then => sub {
+            my $event = shift;
 
-        my $server = $event->server;
-        my $goal   = $inbox_goal{$server};
-        my $count  = $event->count;
-        my $key    = ['INBOX', $server];
+            my $server = $event->server;
+            my $goal   = $inbox_goals->{$server};
+            my $count  = $event->count;
+            my $key    = ['INBOX', $server];
 
-        warn "$server has $count messages for $goal\n" if DEBUG;
+            warn "$server has $count messages for $goal\n" if DEBUG;
 
-        my $old_count = $cache->get($key);
+            my $old_count = $cache->get($key);
 
-        # If we don't have a count yet, or if our new count is
-        # smaller, then cache it, and send it to beeminder!
+            # If we don't have a count yet, or if our new count is
+            # smaller, then cache it, and send it to beeminder!
 
-        # Our cache expires at midnight, so we always push a
-        # new measurement each day.
+            # Our cache expires at midnight, so we always push a
+            # new measurement each day.
 
-        if (! $old_count or $count < $old_count) {
-            $exobrain->intent('Beeminder',
-                goal => $goal,
-                value => $count,
-                comment => "Submitted via exobrain",
-            );
+            if (! $old_count or $count < $old_count) {
+                $exobrain->intent('Beeminder',
+                    goal => $goal,
+                    value => $count,
+                    comment => "Submitted via exobrain",
+                );
 
-            $exobrain->notify(
-                "Updated bmndr/$goal to $count msgs",
-                priority => -1,
-            );
+                $exobrain->notify(
+                    "Updated bmndr/$goal to $count msgs",
+                    priority => -1,
+                );
 
-            say "Updating beeminder goal $goal to $count msgs" if DEBUG;
+                say "Updating beeminder goal $goal to $count msgs" if DEBUG;
 
-            $cache->set($key, $count, seconds_until_tomorrow());
+                $cache->set($key, $count, seconds_until_tomorrow());
+            }
         }
-    }
-);
+    );
+}
 
 sub seconds_until_tomorrow {
     my ($s, $m, $h) = localtime;
     return 86400 - ($h * 60 * 60) - ($m * 60) - $s;
 }
+
+1;
